sidemenu general layout

--- a/SocialStrata/www/views/sidemenu.html
+++ b/SocialStrata/www/views/sidemenu.html
@@ -18,16 +18,57 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item>
-                    <small>logged as</small> User
+                <ion-item class="item-avatar">
+                  <img src="../img/ionic.png">
+                  <h3>User Profile</h3>
+               </ion-item>
+                
+                <ion-item class="stable-bg">
+                    <i>Messages</i>
                 </ion-item>
-                <ion-item menu-close>
-                    <i class="ion ion-person"></i> Profile
+                <ion-item menu-close  class="royal">
+                    Landlord
                 </ion-item>
-                <ion-item menu-close>
+                <ion-item menu-close  class="positive">
+                    Tennant
+                </ion-item>
+                <ion-item menu-close  class="positive">
+                    Tennant
+                </ion-item>
+                
+                <ion-item class="stable-bg">
+                    <i>Groups</i>
+                </ion-item>
+                <ion-item menu-close  class="positive">
+                    Parking Garage
+                </ion-item>
+                <ion-item menu-close  class="positive">
+                    Garden
+                </ion-item>
+                <ion-item menu-close  class="positive">
+                    Water
+                </ion-item>
+                
+                <ion-item class="stable-bg">
+                    <i>Services</i>
+                </ion-item>
+                <ion-item menu-close  class="positive">
+                    Lost &amp; Found
+                </ion-item>
+                <ion-item menu-close  class="positive">
+                    Request Maintenance
+                </ion-item>
+                <ion-item menu-close  class="positive">
+                    Payments
+                </ion-item>
+                
+                <ion-item menu-close class="stable-bg">
+                    <i>Info</i>
+                </ion-item>
+                <ion-item menu-close  class="positive">
                     <i class="ion ion-wrench"></i> Settings
                 </ion-item>
-                <ion-item menu-close>
+                <ion-item menu-close  class="positive">
                     <i class="ion ion-log-out"></i> Logout
                 </ion-item>
             </ion-list>
