change name groups to buildings

--- a/SocialStrata/www/views/building.html
+++ b/SocialStrata/www/views/building.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Group" ng-controller="groupController">
+<ion-view view-title="Building" ng-controller="buildingController">
     <ion-content>
         <ion-list>
             <ion-item ng-repeat="channel in channels">
