change name groups to buildings

--- a/SocialStrata/www/views/sidemenu.html
+++ b/SocialStrata/www/views/sidemenu.html
@@ -18,7 +18,7 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item class="item-avatar">
+                <ion-item ui-sref="app.profile" class="item-avatar">
                   <img src="../img/ionic.png">
                   <h3>User Profile</h3>
                </ion-item>
