--- a/SocialStrata/www/views/auth/login.html
+++ b/SocialStrata/www/views/auth/login.html
@@ -8,6 +8,10 @@
                 <input type="password" placeholder="Password" ng-model="data.password">
             </label>
         </div>
-        <button class="button button-block button-calm" ng-click="login()">Login</button>
+        <button class="button button-block button-dark" ng-click="login()">Login</button>
+		
+		<p class="text-center">Or</p>
+		
+		<button class="button button-block button-positive" ng-click="facebookLogin()">Login with Facebook</button>
     </ion-content>
 </ion-view>
