--- a/SocialStrata/www/views/messages/chat.html
+++ b/SocialStrata/www/views/messages/chat.html
@@ -1,6 +1,7 @@
 <ion-view id="userMessagesView"
           cache-view="false"
-          view-title="<i class='icon ion-chatbubble user-messages-top-icon'></i> <div class='msg-header-username'>{{toUser.username}}</div>">
+          ng-controller="messagesController"
+          view-title="{{toUser.channel}}">
 
     <div class="loader-center" ng-if="!doneLoading">
         <div class="loader">
@@ -17,7 +18,7 @@
             <div ng-if="user._id !== message.userId">
 
                 <img ng-click="viewProfile(message)" class="profile-pic left"
-                     ng-src="{{toUser.pic}}" onerror="onProfilePicError(this)" />
+                     ng-src="{{toUser.pic}}" onerror="onProfilePicError(this)"/>
 
                 <div class="chat-bubble left">
 
@@ -36,7 +37,7 @@
             <div ng-if="user._id === message.userId">
 
                 <img ng-click="viewProfile(message)" class="profile-pic right"
-                     ng-src="{{user.pic}}" onerror="onProfilePicError(this)" />
+                     ng-src="{{user.pic}}" onerror="onProfilePicError(this)"/>
 
                 <div class="chat-bubble right">
 
@@ -61,8 +62,10 @@
     <form name="sendMessageForm" ng-submit="sendMessage(sendMessageForm)" novalidate>
         <ion-footer-bar class="bar-stable item-input-inset message-footer" keyboard-attach>
             <label class="item-input-wrapper">
-                <textarea ng-model="input.message" value="" placeholder="Send {{toUser.username}} a message..." required minlength="1" maxlength="1500" msd-elastic></textarea>
+                <textarea ng-model="input.message" value="" placeholder="Send {{toUser.username}} a message..." required
+                          minlength="1" maxlength="1500" msd-elastic></textarea>
             </label>
+
             <div class="footer-btn-wrap">
                 <button class="button button-icon icon ion-android-send footer-btn" type="submit"
                         ng-disabled="!input.message || input.message === ''">
