--- a/SocialStrata/www/views/messages/chat.html
+++ b/SocialStrata/www/views/messages/chat.html
@@ -1,7 +1,7 @@
 <ion-view id="userMessagesView"
           cache-view="false"
           ng-controller="messagesController"
-          view-title="{{toUser.channel}}">
+          view-title="{{channelName}}">
 
     <div class="loader-center" ng-if="!doneLoading">
         <div class="loader">
