hide back button on chat

--- a/SocialStrata/www/views/messages/chat.html
+++ b/SocialStrata/www/views/messages/chat.html
@@ -1,7 +1,8 @@
 <ion-view id="userMessagesView"
           cache-view="false"
           ng-controller="messagesController"
-          view-title="{{channelName}}">
+          view-title="{{channelName}}"
+          hide-back-button="true">
 
     <div class="loader-center" ng-if="!doneLoading">
         <div class="loader">
