--- a/SocialStrata/www/views/sidemenu.html
+++ b/SocialStrata/www/views/sidemenu.html
@@ -1,42 +1,45 @@
 <ion-side-menus enable-menu-with-back-views="true" ng-controller="sidemenuController">
-    <ion-side-menu-content>
-        <ion-nav-bar class="bar-balanced">
-            <ion-nav-back-button>
-            </ion-nav-back-button>
+	<ion-side-menu-content>
+		<ion-nav-bar class="bar-balanced">
+			<ion-nav-back-button>
+			</ion-nav-back-button>
 
-            <ion-nav-buttons side="left">
-                <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-                </button>
-            </ion-nav-buttons>
-        </ion-nav-bar>
-        <ion-nav-view name="menuContent"></ion-nav-view>
-    </ion-side-menu-content>
+			<ion-nav-buttons side="left">
+				<button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+				</button>
+			</ion-nav-buttons>
+		</ion-nav-bar>
+		<ion-nav-view name="menuContent"></ion-nav-view>
+	</ion-side-menu-content>
 
-    <ion-side-menu side="left">
-        <ion-header-bar class="bar-balanced">
-            <h1 class="title">Social Strata</h1>
-        </ion-header-bar>
-        <ion-content>
-            <ion-list>
-                <ion-item menu-close ui-sref="app.buildings" class="item-avatar">
-                  <h3>{{building.name}}</h3>
-				  <p>{{building.address}}</p>
-               </ion-item>
-			   <ion-item menu-close  class="positive" ui-sref="login">
-                    <i class="ion ion-log-out"></i> Logout
-                </ion-item>
-                
-                <ion-item menu-close  class="royal" ui-sref="app.people">
-                    Direct Messages
-                </ion-item>
-                
-                <ion-item class="stable-bg">
-                    <i>Chat channels</i>
-                </ion-item>
-                <ion-item menu-close class="positive" ng-repeat="(key,channel) in channels" ng-click="openChannel(key)" >
-                    {{ channel }}
-                </ion-item>
-            </ion-list>
-        </ion-content>
-    </ion-side-menu>
+	<ion-side-menu side="left">
+		<ion-header-bar class="bar-balanced">
+			<h1 class="title">Social Strata</h1>
+		</ion-header-bar>
+		<ion-content>
+			<ion-list>
+				<ion-item menu-close ui-sref="app.buildings" class="item-avatar">
+					<h3>{{building.name}}</h3>
+					<p>{{building.address}}</p>
+				</ion-item>
+				<ion-item menu-close class="positive" ui-sref="app.profile">
+					 Profile
+				</ion-item>
+				<ion-item menu-close class="positive" ui-sref="login">
+					<i class="ion ion-log-out"></i> Logout
+				</ion-item>
+
+				<ion-item menu-close class="royal" ui-sref="app.people">
+					Direct Messages
+				</ion-item>
+
+				<ion-item class="stable-bg">
+					<i>Chat channels</i>
+				</ion-item>
+				<ion-item menu-close class="positive" ng-repeat="(key,channel) in channels" ng-click="openChannel(key)">
+					{{ channel }}
+				</ion-item>
+			</ion-list>
+		</ion-content>
+	</ion-side-menu>
 </ion-side-menus>
