--- a/SocialStrata/www/views/messages/messages.html
+++ b/SocialStrata/www/views/messages/messages.html
@@ -3,7 +3,7 @@
         <ion-list>
             <ion-item class="item-avatar" ng-repeat="(key, contact) in contacts"
                       ui-sref="app.messages({contactId : key})">
-                {{contact.username}}
+                {{contact.name}}
             </ion-item>
         </ion-list>
 
