--- a/SocialStrata/www/views/messages/chat.html
+++ b/SocialStrata/www/views/messages/chat.html
@@ -10,7 +10,7 @@
 
 		<div ng-repeat="message in messages" class="message-wrapper">
 
-			<div ng-if="user._id !== message.userId">
+			<div ng-if="user.id !== message.userId">
 
 				<img class="profile-pic left"
 					ng-src="{{message.userPic}}" 
@@ -18,29 +18,25 @@
 
 				<div class="chat-bubble left">
 
-					<div class="message" ng-bind-html="message.text | nl2br" autolinker>
-					</div>
+					<div class="message" ng-bind-html="message.text | nl2br" autolinker></div>
 
 					<div class="message-detail">
-						<span class="bold">{{message.username}}</span>,
-						<span am-time-ago="message.date"></span>
+						<span class="bold">{{message.userName}}</span>
 					</div>
 
 				</div>
 			</div>
 
-			<div ng-if="user._id === message.userId">
+			<div ng-if="user.id === message.userId">
 
 				<img class="profile-pic right" ng-src="{{message.userPic}}" onerror="onProfilePicError(this)" />
 
 				<div class="chat-bubble right">
 
-					<div class="message" ng-bind-html="message.text | nl2br" autolinker>
-					</div>
+					<div class="message" ng-bind-html="message.text | nl2br" autolinker></div>
 
 					<div class="message-detail">
-						<span class="bold">{{user.username}}</span>,
-						<span am-time-ago="message.date"></span>
+						<span class="bold">{{user.username}}</span>
 					</div>
 
 				</div>
@@ -54,15 +50,15 @@
 	</ion-content>
 	
 
-	<form name="sendMessageForm" ng-submit="sendMessage(input.message)" novalidate>
+	<form name="sendMessageForm" ng-submit="sendMessage(inputMessage)" novalidate>
 		<ion-footer-bar class="bar-stable item-input-inset message-footer" keyboard-attach>
 			<label class="item-input-wrapper">
-				<textarea ng-model="input.message" value="" placeholder="Send {{toUser.username}} a message..." required minlength="1" maxlength="1500"
+				<textarea ng-model="inputMessage" value="" placeholder="Send {{toUser.username}} a message..." required minlength="1" maxlength="1500"
 				msd-elastic></textarea>
 			</label>
 
 			<div class="footer-btn-wrap">
-				<button class="button button-icon icon ion-android-send footer-btn" type="submit" ng-disabled="!input.message || input.message === ''">
+				<button class="button button-icon icon ion-android-send footer-btn" type="submit" ng-disabled="!inputMessage || inputMessage === ''">
 				</button>
 			</div>
 		</ion-footer-bar>
