--- a/SocialStrata/www/views/messages/messages.html
+++ b/SocialStrata/www/views/messages/messages.html
@@ -1,15 +1,15 @@
 <ion-view view-title="Direct Messages" ng-controller="directMessagesController">
     <ion-content>
+
         <ion-list>
             <ion-item class="item-avatar" ng-repeat="(key, contact) in contacts"
-                      ui-sref="app.messages({contactId : key})">
+                      ui-sref="app.message({contactId : key})">
                 <img src="http://ionicframework.com/img/docs/mcfly.jpg">
                 <h2>{{contact.name}}</h2>
                 <p>last message</p>
                 <span class="badge badge-assertive">3</span>
             </ion-item>
         </ion-list>
-
         <div class="card" ng-show="!channels">
             <div class="item item-text-wrap">
                 No messages available
