--- a/SocialStrata/www/views/messages/chat.html
+++ b/SocialStrata/www/views/messages/chat.html
@@ -1,4 +1,4 @@
-<ion-view id="userMessagesView" cache-view="false" ng-controller="messagesController" view-title="{{channelName}}" hide-back-button="true">
+<ion-view id="userMessagesView" cache-view="false" ng-controller="messagesController" view-title="{{ title }}" hide-back-button="true">
 
 	<div class="loader-center" ng-if="!doneLoading">
 		<div class="loader">
