--- a/SocialStrata/www/views/sidemenu.html
+++ b/SocialStrata/www/views/sidemenu.html
@@ -18,23 +18,25 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item menu-close ui-sref="app.buildings" class="item-avatar">
+                <ion-item menu-close ui-sref="app.buildings" >
                     <h3>{{building.name}}</h3>
                     <p>{{user.displayName}}</p>
                 </ion-item>
 				<ion-item menu-close class="positive" ui-sref="app.profile">
-					 Profile
+					 My profile
 				</ion-item>
-                <ion-item menu-close ui-sref="app.messages">
+                <ion-item menu-close class="assertive" ui-sref="app.messages">
                     Direct Messages
                 </ion-item>
-                <ion-item>
+                
+				<ion-item class="item-divider">
                     <i>Chat channels</i>
                 </ion-item>
                 <ion-item menu-close class="positive" ng-repeat="(key,channel) in channels" ng-click="openChannel(key)">
                     {{ channel }}
                 </ion-item>
-                <ion-item menu-close ui-sref="login">
+                
+				<ion-item menu-close ui-sref="login">
                     <i class="ion ion-log-out"></i> Logout
                 </ion-item>
             </ion-list>
