direct messages chat

--- a/SocialStrata/scss/ionic.app.scss
+++ b/SocialStrata/scss/ionic.app.scss
@@ -2,7 +2,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 @import "../www/lib/ionic/scss/ionic";
 @import "modules/general/variables";
-
+@import "modules/general/utils";
+@import "modules/general/error";
 
 @import "modules/messages/chat";
-
