--- a/SocialStrata/www/views/profile/profile.html
+++ b/SocialStrata/www/views/profile/profile.html
@@ -10,7 +10,7 @@
 				<input type="text" placeholder="john@mygreenspace.co" ng-model="data.email">
 			</label>
 		</div>
-		<button class="button button-block button-dark" ng-click="update()">Update</button>
+		<button class="button button-block button-balanced" ng-click="update()">Update</button>
 
 	</ion-content>
 </ion-view>
